# nimble

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  (+1 more)
benchmark/: bintree.nbl  count.nbl  fibonacci.nbl  prime.nbl
doc/: README.md  ast.md  benchmarking.md  control-flow.md  environment.md  error.md  function.md  grammar.md  interpreter.md  language-anatomy.md  lexer.md  nimble.md  old_grammar.md  oop.md  parser.md  resolver.md  statement.md  syntax.md
example/: interpreter_test1.nbl  stmt_test2.nbl  stmt_test4.nbl  test.nbl
examples/: README.md
include/: ast_printer.cpp  builtins.hpp  callable.hpp  class.hpp  environment.hpp  error.hpp  expr.hpp  function.hpp  instance.hpp  interpreter.hpp  lexer.hpp  list.hpp  nbl_callable.hpp  nbl_class.hpp  nbl_function.hpp  nbl_instance.hpp  nbl_list.hpp  parser.hpp  resolver.hpp  scanner.hpp  stmt.hpp  token.hpp  util.hpp
lib/: README.md  ascii.nbl  assert.nbl  collections.nbl  math.nbl  search.nbl  secret.nbl  sort.nbl
nimble-syntax/: README.md
src/: ast_printer.tmp  ast_printer_driver.cpp  builtins.cpp  class.cpp  environment.cpp  error.cpp  expr.cpp  function.cpp  instance.cpp  interpreter.cpp  lexer.cpp  list.cpp  main.cpp  nbl_class.cpp  nbl_function.cpp  nbl_instance.cpp  nbl_list.cpp  parser.cpp  resolver.cpp  scanner.cpp  stmt.cpp  token.cpp  util.cpp
test/: test.nbl.expected
tests/: test.nbl  test.nbl.expected
tool/: bench.sh  test.sh
tools/: bench.sh  test.sh
vsc-syntax/: package.json
web/: README.md  app.py
(+129 files in other folders)
